<resources>
    <string name="app_name">Sudoku</string>

    <string name="nomUser">Name : </string>
    <string name="nomUserHint">Your name</string>
    <string name="prenomUser">Firstname : </string>
    <string name="prenomUserHint">Your firstname</string>
    <string name="emailUser">Email : </string>
    <string name="emailUserHint">Your email</string>
    <string name="buttonValideUser">Let\'s go !</string>

    <string name="welcome">Welcome</string>
    <string name="new_game">Start New Game</string>
    <string name="show_instructions">Show instructions</string>
    <string name="buttonScore">Scoring</string>

    <string name="instructions">Instructions</string>
    <string name="instructions_1">1. In Sudoku it is intended to place all the remaining pieces on the board. The numbers range from 1 to 9 (in 9x9 Sudoku).</string>
    <string name="instructions_2">2. The board is separated into several squares, and inside each of them it is only allowed to place one of each number.</string>
    <string name="instructions_3">3. It is only allowed to place one of each number at each row, both horizontal and vertical.</string>
    <string name="go_back_button">Go back</string>

    <string name="action_reset">Reset</string>
    <string name="ranking">Rank</string>
    <string name="score">Score : </string>

    <string name="choose_difficulty">Choose difficulty:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="start_game">Start Game</string>

    <string name="choose_number">Choose number</string>
    <string name="choose_a_number">Choose number to place:</string>
    <string name="place_number">Place number</string>
    <string name="piece_unsure">Mark piece as unsure</string>
    <string name="remove_piece">Remove piece</string>

    <string name="start_piece_error">Can not change start piece</string>
    <string name="check_board">Check board</string>
    <string name="board_correct">Board is correct</string>
    <string name="board_incorrect">Board is not correct</string>

    <string name="messageDialogue">Your new score :</string>
    <string name="dialogueValider">Confirm</string>

</resources>
