<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.formulaireID.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomUser"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/nomUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomUserHint"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenomUser"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/prenomUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenomUserHint"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailUser"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/emailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailUserHint"
            android:textSize="25sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirmUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonValideUser"
        android:layout_marginRight="15dp"
        android:layout_gravity="right"
        android:textSize="25sp"/>

</LinearLayout>