<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewHoldUser"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/messageInfoBienvenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonStartNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/buttonShowInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_instructions" />

    <Button
        android:id="@+id/boutonScoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonScore" />

</LinearLayout>