<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.score.PageScoringActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:id="@+id/viewClassement"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/ranking"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/viewNom"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/nomUser"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/viewPrenom"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/prenomUser"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/viewEmail"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/emailUser"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/viewScore"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/score"
            android:layout_weight="1"/>
    </LinearLayout>

</FrameLayout>